# Radiance-Ray-Tracing

./: .gitignore  CMakeLists.txt  bvh.h  clcontext.h  core.h  linalg.h  main.cpp  radiance.cl  shader.cl
compiler/: genSBT.py
radiance/: CMakeLists.txt  radiance.hpp
radiance/include/: radiance.h
radiance/shader/: data.cl  math.cl  pbr.cl  radiance.cl
radiance/src/: bvh.cpp  bvh.h  clcontext.cpp  clcontext.h  core.h  linalg.h  main.cpp  radiance.cpp
samples/: CMakeLists.txt  sample0.cpp  sample1.cpp  sample2.cpp  sbt.json  shader.cl  shader2.cl
tools/: CMakeLists.txt  genSBT.py  modelViewer.cpp  sceneBuilder.cpp  sceneBuilder.h
visualization/: CMakeLists.txt  inspector.cpp  inspector.h  main.cpp
